--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="nav-link active dropdown-toggle" href="./perfil.html"role="button" data-bs-toggle="dropdown" aria-expanded="false">Perfil</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="./perfil.html">Registrarse</a></li>
-                <li><a class="dropdown-item" href="#">Iniciar Seccion</a></li>
+                <li><a class="dropdown-item" href="./iniciars.html">Iniciar Sesión</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -41,6 +41,26 @@
     </nav>
     <div class="container-fluid">
       <img src="./img/bannerbike.jpg" alt="Banner" class="banner">
+    </div>
+    <div class="grid-container">
+      <div class="grid-item">
+        <img src="./img/marlin.jfif" alt="Imagen 1">
+        <h3>Trek Marlin 6</h3>
+      </div>
+      <div class="grid-item">
+        <img src="./img/santa cruz.jpg" alt="Imagen 2">
+        <h3>Santa Cruz Chameleon 8</h3>
+        
+      </div>
+      <div class="grid-item">
+        <img src="./img/special.jpg" alt="Imagen 3">
+        <h3>Specialized Epic</h3>
+       
+      </div>
+      <div class="grid-item">
+        <img src="./img/cannondale.jpg" alt="Imagen 4">
+        <h3>Cannondale 29 Scalpel ht Carbon 2</h3>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
