--- a/iniciars.html
+++ b/iniciars.html
@@ -23,7 +23,7 @@
               <a class="nav-link active dropdown-toggle" href="./perfil.html"role="button" data-bs-toggle="dropdown" aria-expanded="false">Perfil</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="./perfil.html">Registrarse</a></li>
-                <li><a class="dropdown-item" href="./iniciars.html">Iniciar Seccion</a></li>
+                <li><a class="dropdown-item" href="./iniciars.html">Iniciar Sesión</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -42,6 +42,20 @@
     <div class="container-fluid">
       <img src="./img/bannerbike.jpg" alt="Banner" class="banner">
     </div>
+    <div class="container">
+        <h3>Iniciar Sesión</h3>
+        <form>
+          <div class="form-group">
+            <label for="nombre">Usuario:</label>
+            <input type="text" id="nombre" name="nombre" required>
+          </div>
+          <div class="form-group">
+            <label for="clave">Contraseña:</label>
+            <input type="password" id="clave" name="clave" required>
+          </div>
+          <button type="submit" class="btn-login">Entrar</button>
+        </form>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
