--- a/perfil.html
+++ b/perfil.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Perfil</title>
+    <title>Asprino Bike</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body>
@@ -20,7 +20,11 @@
               <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./perfil.html">Perfil</a>
+              <a class="nav-link active dropdown-toggle" href="./perfil.html"role="button" data-bs-toggle="dropdown" aria-expanded="false">Perfil</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="./perfil.html">Registrarse</a></li>
+                <li><a class="dropdown-item" href="./iniciars.html">Iniciar Sesión</a></li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="./ubicacion.html">Ubicación</a>
@@ -35,11 +39,12 @@
         </div>
       </div>
     </nav>
+    
     <div class="container-fluid">
       <img src="./img/bannerbike.jpg" alt="Banner" class="banner">
     </div>
     <div class="container">
-      <h1>Registro de Clientes</h1>
+      <h3>Registro de Clientes</h3>
       <form>
         <div class="form-group">
           <label for="nombre">Nombre:</label>
