--- a/carrodecompras.html
+++ b/carrodecompras.html
@@ -30,17 +30,17 @@
               <a class="nav-link active" href="./ubicacion.html">Ubicación</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./carrodecompras.html">Carro</a>
+              <a class="nav-link active" href="./carrodecompras.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./mantencion.html">Mantenimiento</a>
+              <a class="nav-link active" href="./mantencion.html">Servicios</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <div class="container-fluid">
-      <img src="./img/bannerbike.jpg" alt="Banner" class="banner">
+      <img src="./img/taller-2.jpg" alt="Banner" class="banner">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
