--- a/index.html
+++ b/index.html
@@ -1,65 +1,166 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Asprino Bike</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"> <img class="logo" src="./img/Logo.png"> </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="./index.html">
+          <img class="logo" src="./img/Logo.png" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="./index.html"
+                >Inicio</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active dropdown-toggle" href="./perfil.html"role="button" data-bs-toggle="dropdown" aria-expanded="false">Perfil</a>
+              <a
+                class="nav-link active dropdown-toggle"
+                href="./perfil.html"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                >Perfil</a
+              >
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="./perfil.html">Registrarse</a></li>
-                <li><a class="dropdown-item" href="./iniciars.html">Iniciar Sesión</a></li>
+                <li>
+                  <a class="dropdown-item" href="./perfil.html">Registrarse</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./iniciars.html"
+                    >Iniciar Sesión</a
+                  >
+                </li>
               </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="./ubicacion.html">Ubicación</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./carrodecompras.html">Carro</a>
+              <a class="nav-link active" href="./carrodecompras.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./mantencion.html">Mantenimiento</a>
+              <a class="nav-link active" href="./mantencion.html">Servicios</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
-      <img src="./img/bannerbike.jpg" alt="Banner" class="banner">
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/bike-1.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="./img/bike-2.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="./img/bike-3.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="./img/bike-4.jpg" class="d-block w-100" alt="..." />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <div class="grid-container">
-      <div class="grid-item">
-        <img src="./img/marlin.jfif" alt="Imagen 1">
-        <h3>Trek Marlin 6</h3>
+    <div
+      class="container d-flex align-items-center justify-content-center"
+      style="height: 20vh"
+    >
+      <h2 class="text-center">Conoce nuestros servicios</h2>
+    </div>
+    <div class="image-gallery">
+      <div class="card">
+        <img
+          src="./img/servicio-1.jpg"
+          class="card-img-top"
+          alt="Imagen de prueba"
+        />
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">El cuidado completo que tú bicicleta necesita</p>
+          <a href="./mantencion.html" class="btn btn-primary"
+            >Más informacion</a
+          >
+        </div>
       </div>
-      <div class="grid-item">
-        <img src="./img/santa cruz.jpg" alt="Imagen 2">
-        <h3>Santa Cruz Chameleon 8</h3>
+      <div class="card">
+        <img
+          src="./img/servicio-2.jpg"
+          class="card-img-top"
+          alt="Imagen de prueba"
+        />
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">
+            Rueda seguro con una suspención en buen estado
+          </p>
+          <a href="./mantencion.html" class="btn btn-primary"
+            >Más informacion</a
+          >
+        </div>
       </div>
-      <div class="grid-item">
-        <img src="./img/special.jpg" alt="Imagen 3">
-        <h3>Specialized Epic</h3>
-      </div>
-      <div class="grid-item">
-        <img src="./img/cannondale.jpg" alt="Imagen 4">
-        <h3>Cannondale 29 Scalpel ht Carbon 2</h3>
+      <div class="card">
+        <img
+          src="./img/servicio-3.jpg"
+          class="card-img-top"
+          alt="Imagen de prueba"
+        />
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">
+            Vuelve a rodar en pocas horas con este servicio
+          </p>
+          <a href="./mantencion.html" class="btn btn-primary"
+            >Más informacion</a
+          >
+        </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
