--- a/ubicacion.html
+++ b/ubicacion.html
@@ -1,47 +1,164 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Asprino Bike</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"> <img class="logo" src="./img/Logo.png"> </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="./index.html">
+          <img class="logo" src="./img/Logo.png" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="./index.html"
+                >Inicio</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active dropdown-toggle" href="./perfil.html"role="button" data-bs-toggle="dropdown" aria-expanded="false">Perfil</a>
+              <a
+                class="nav-link active dropdown-toggle"
+                href="./perfil.html"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                >Perfil</a
+              >
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="./perfil.html">Registrarse</a></li>
-                <li><a class="dropdown-item" href="./iniciars.html">Iniciar Sesión</a></li>
+                <li>
+                  <a class="dropdown-item" href="./perfil.html">Registrarse</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./iniciars.html"
+                    >Iniciar Sesión</a
+                  >
+                </li>
               </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="./ubicacion.html">Ubicación</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./carrodecompras.html">Carro</a>
+              <a class="nav-link active" href="./carrodecompras.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./mantencion.html">Mantenimiento</a>
+              <a class="nav-link active" href="./mantencion.html"
+                >Servicios</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <div class="container-fluid">
-      <img src="./img/bannerbike.jpg" alt="Banner" class="banner">
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/bike-1.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="./img/bike-2.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="./img/bike-3.jpg" class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="./img/bike-4.jpg" class="d-block w-100" alt="..." />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <div class="container-fluid">
+      <div class="row mt-4">
+        <!-- Contenido al lado izquierdo -->
+        <div class="col-lg-6">
+          <h2>Ubicación</h2>
+          <a
+            ><iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.0902484256585!2d-70.64802542427435!3d-33.44695519733329!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c57532cc02d7%3A0x65bc9246c195b00b!2sSanta%20Rosa%20231%20Condominio!5e0!3m2!1ses-419!2scl!4v1690053971050!5m2!1ses-419!2scl"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe
+          ></a>
+        </div>
+
+        <!-- Información al lado derecho -->
+        <div class="col-lg-6">
+          <h2>Información</h2>
+          
+          <div class="table-responsive">
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th>Lunes a Viernes</th>
+                  <th>Sábado</th>
+                  <th>Domingo</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>8:00 a 18:00</td>
+                  <td>9:00 a 14:00</td>
+                  <td>Cerrado</td>
+                </tr>
+                <tr>
+                  <td>Número de Teléfono</td>
+                  <td>+56972786301</td>
+                  <td>+56968543220</td> 
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+          
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
