--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="card-body">
           <h5 class="card-title"></h5>
           <p class="card-text">
-            Rueda seguro con una suspención en buen estado
+            Rueda seguro con una suspensión en buen estado
           </p>
           <a href="./mantencion.html" class="btn btn-primary"
             >Más informacion</a
