--- a/mantencion.html
+++ b/mantencion.html
@@ -79,11 +79,18 @@
             <div class="card h-100">
               <img src="./img/servicio-4.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Mantenimiento expres</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Mantenimiento express</h5>
+                <p class="card-text">Vuelve a rodar seguro en pocas horas:
+
+                  El servicio incluye:
+                <li>Regulación frenos</li>
+                <li>Regulación de cambios</li>
+                <li>Lubricación</li>
+                <li>Revisión general</li>(Repuestos no incluidos)
+              </p>
               </div>
               <div class="card-footer">
-                <small class="text-body-secondary"></small>
+                <h4 class="card-title">$25.000</h4>
               </div>
             </div>
           </div>
@@ -92,10 +99,14 @@
               <img src="./img/servicio-5.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mantenimiento de suspension</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Se realiza cambio de aceite, lubricación de botellas de shock y horquilla y un nuevo purgado de aire.El servicio incluye:
+                  <li>Revisión</li>
+                <li>Limpieza</li>
+              <li>Desarme completo</li>
+            <li>Cambio de Piolas</li>(Repuestos no incluidos)</p>
               </div>
               <div class="card-footer">
-                <small class="text-body-secondary"></small>
+                <h4 class="card-title">$35.000</h4>
               </div>
             </div>
           </div>
@@ -104,10 +115,18 @@
               <img src="./img/servicio-6.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Mantenimiento Full</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">Es un desarme completo de dirección, frenos, transmisión. Se realiza el purgado de frenos con el líquido requerido por fabricante o piola según sistema.
+                  
+                  El servicio incluye:
+                  <li>Lavado completo de marco y componentes</li>
+                  <li>Engrasado y lubricación</li>
+                  <li>Limpieza externa de horquilla</li>
+                  <li>Ajuste completo. </li>
+                  
+                  (Repuestos no incluido)</p>
               </div>
               <div class="card-footer">
-                <small class="text-body-secondary"></small>
+                <h4 class="card-title">$40.000</h4>
               </div>
             </div>
           </div>
