--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <img
           src="./img/servicio-1.jpg"
           class="card-img-top"
-          alt="Imagen de prueba"
+          alt="Servicio-1"
         />
         <div class="card-body">
           <h5 class="card-title"></h5>
@@ -128,7 +128,7 @@
         <img
           src="./img/servicio-2.jpg"
           class="card-img-top"
-          alt="Imagen de prueba"
+          alt="Servicio-2"
         />
         <div class="card-body">
           <h5 class="card-title"></h5>
@@ -142,9 +142,9 @@
       </div>
       <div class="card">
         <img
-          src="./img/servicio-3.jpg"
+          src="./img/servicio--3.jpg"
           class="card-img-top"
-          alt="Imagen de prueba"
+          alt="Servicio-3"
         />
         <div class="card-body">
           <h5 class="card-title"></h5>
