--- a/mantencion.html
+++ b/mantencion.html
@@ -77,7 +77,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card h-100">
-              <img src="./img/servicio-4.jpg" class="card-img-top" alt="...">
+              <img src="./img/servicio-4.jpg" class="card-img-top" alt="servicio-4">
               <div class="card-body">
                 <h5 class="card-title">Mantenimiento express</h5>
                 <p class="card-text">Vuelve a rodar seguro en pocas horas:
@@ -96,7 +96,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="./img/servicio-5.jpg" class="card-img-top" alt="...">
+              <img src="./img/servicio-5.jpg" class="card-img-top" alt="servicio-5">
               <div class="card-body">
                 <h5 class="card-title">Mantenimiento de suspension</h5>
                 <p class="card-text">Se realiza cambio de aceite, lubricación de botellas de shock y horquilla y un nuevo purgado de aire.El servicio incluye:
@@ -112,7 +112,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="./img/servicio-6.jpg" class="card-img-top" alt="...">
+              <img src="./img/servicio-6.jpg" class="card-img-top" alt="servicio-6">
               <div class="card-body">
                 <h5 class="card-title">Mantenimiento Full</h5>
                 <p class="card-text">Es un desarme completo de dirección, frenos, transmisión. Se realiza el purgado de frenos con el líquido requerido por fabricante o piola según sistema.
