cambio de imagen en mantecion

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
       <div class="card">
         <img
-          src="./img/servicio--3.jpg"
+          src="./img/servicio-30.png"
           class="card-img-top"
           alt="Servicio-3"
         />
