--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="servicio de mantenimiento para bicicletas">
-    <meta name="keywords" content="noticias,bicicletas,mantenimiento,bike,full,express,suspension">words
-    
+    <meta name="keywords" content="noticias,bicicletas,mantenimiento,bike,full,express,suspension">
+
     <link rel="stylesheet" href="./css/style.css" />
     <title>Asprino Bike</title>
     <link
